# m68k-as

./: .gitignore  CMakeLists.txt  GNU General Public License.htm  License.txt  MyWork.S68  README.md  edit68k.code-workspace  main.cpp  makefile  tutorial4.L68  tutorial4.S68
.github/ISSUE_TEMPLATE/: bug_report.md
legacy/: ASSEMBLE.CPP  BUILD.CPP  CODEGEN.CPP  DIRECTIV.CPP  ERROR.CPP  EVAL.CPP  GLOBALS.CPP  INSTLOOK.CPP  INSTTABL.CPP  LISTING.CPP  MACRO.CPP  MOVEM.CPP  OBJECT.CPP  OPPARSE.CPP  STRUCTURED.CPP  SYMBOL.CPP  asm.h  edit68k.code-workspace  editorOptions.h  mainS.cpp  mainS.h  optionsS.h  proto.h  sub_stdlib.cpp  textS.h  vcl.cpp
legacy/include/: Classes.hpp  Dialogs.hpp  Forms.hpp  sub_stdlib.h  vcl.h
result/: tutorial4.L68  tutorial4.S68
